# fileterm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_EN.md  design.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
.agents/: README.md
.agents/extensions/: README.md
.agents/skills/common-components-skill/: SKILL.md
.agents/skills/multiplatform-desktop-skill/: SKILL.md
.githooks/: prepare-commit-msg
.github/fixtures/tauri-socket-lifecycle/: Cargo.toml
.github/fixtures/tauri-socket-lifecycle/tests/: direct_transport.rs
.github/workflows/: ci.yml  release.yml
.patches/gpui-unofficial/: Cargo.toml  Cargo.toml.orig  README.md
.patches/gpui-unofficial/examples/: text.rs
.patches/gpui-unofficial/src/: app.rs  element.rs  inspector.rs  profiler.rs  styled.rs  window.rs
.patches/gpui-unofficial/src/elements/: div.rs
.patches/gpui-unofficial/src/profiler/: actions.rs
.patches/gpui-util-gpui-unofficial/: Cargo.toml  Cargo.toml.orig  README.md
.patches/gpui-util-gpui-unofficial/src/: lib.rs
apps/desktop/: index.html  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/services/: mod.rs  webdav.rs  workspace.rs
apps/desktop/src-tauri/src/sessions/: local_files.rs  mod.rs  ssh.rs  system_metrics.rs
apps/desktop/src-tauri/src/storage/: mod.rs
apps/desktop/src-tauri/tests/: contract.rs
apps/desktop/src/bridge/: tauri-api.ts
apps/desktop/src/main/: ipc.ts  main.ts
apps/desktop/src/preload/: preload.cts
apps/desktop/src/renderer/: App.tsx  i18n.ts  main.tsx  vite-env.d.ts
apps/desktop/test/controllers/: ssh-session-controller.test.mjs  workspace-windowing.test.mjs
apps/desktop/test/profiles/: file-profile-repository.test.ts
apps/electron/: dev-app-update.yml  electron-builder.update-test.yml  package.json  tsconfig.node.json  vite.config.ts
apps/electron/scripts/: clean-dist-electron.mjs  clean-release.mjs
apps/gpui/: Cargo.toml  build.rs
apps/gpui/assets/icons/: icon.icns
apps/gpui/examples/: term_bench.rs  term_pty.rs  term_spike.rs
apps/gpui/scripts/: build-linux.sh  build-macos.sh  build-windows.sh
apps/gpui/src/: error.rs  lib.rs  main.rs
apps/gpui/src/backend/: app_handle.rs  mod.rs
apps/gpui/src/backend/commands/: mod.rs  workspace_window.rs
apps/gpui/src/backend/sessions/: local_files.rs  mod.rs
apps/gpui/src/backend/storage/: mod.rs
apps/gpui/src/ftp/: client.rs  mod.rs
apps/gpui/src/services/: logging.rs  mod.rs  profile_ops.rs  ssh_keys.rs  ssh_profile.rs  webdav.rs
apps/gpui/src/sftp/: client.rs  file_manager.rs  mod.rs  transfer.rs
apps/gpui/src/ssh/: controller.rs  mod.rs  system_sidebar.rs  terminal_dock.rs  tunnel.rs
apps/gpui/src/state/: mod.rs
apps/gpui/src/term/: mod.rs  model.rs  osc.rs  perform.rs  pty.rs  spawn.rs  stream.rs  transport.rs  view.rs
apps/gpui/src/theme/: mod.rs
apps/gpui/src/view/: detached_session.rs  ftp_workspace.rs  local_session.rs  mod.rs  root.rs  session.rs  ssh_tunnels.rs  stream_session.rs  text_editor.rs
apps/gpui/src/view/root/: connection_manager.rs  ssh_key_manager.rs  webdav.rs
apps/gpui/src/view/root/ssh_key_manager/: layout.rs
apps/gpui/src/window/: detach.rs  kind.rs  menu.rs  mod.rs  registry.rs  tab_drag.rs  tray.rs
apps/tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/scripts/: create-windows-updater-manifest.mjs  run-tauri.mjs
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.macos.conf.json  tauri.windows.conf.json
apps/tauri/src-tauri/.cargo/: audit.toml
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: lib.rs
apps/tauri/src-tauri/src/commands/: mod.rs  workspace_window.rs
apps/tauri/src-tauri/src/services/: connections.rs  logging.rs  mod.rs  profile_ops.rs  ssh_keys.rs  transfers.rs  updates.rs  webdav.rs  workspace.rs  workspace_window_placement.rs  workspace_window_registry.rs
apps/tauri/src-tauri/src/sessions/: ftp.rs  local_files.rs  mod.rs  serial.rs  ssh.rs  system_metrics.rs  telnet.rs  telnet_direct.rs  terminal.rs
apps/tauri/src-tauri/src/storage/: mod.rs
apps/tauri/src-tauri/tests/: contract.rs
docs/: RELEASE-WORKFLOW.md  architecture.md  design.md  hidden-features.md  integration-inventory.md  roadmap.md
docs/decisions/: 0001-repository-as-record-system.md  0002-protocol-boundaries.md  0003-resumable-transfer-staging.md  0005-dual-runtime-frontend-split.md  README.md
docs/plans/: README.md
docs/plans/active/: connection-protocol-expansion.md  detachable-session-windows-implementation.md  detachable-session-windows-tauri.md  detachable-session-windows.md  dual-runtime-frontend-split.md  fileterm-core-decoupling-plan.md  gpui-migration-inventory.md  gpui-refactor.md  gpui-spike.md  multiplatform-system-observability.md  quality-gates-and-tech-debt-cleanup.md  russh-migration.md  rust-backend-migration-plan.md  ssh-shell-cwd-follow.md  structural-boundaries.md  tauri-code-audit-remediation-2026-07-17.md  tauri-electron-detail-parity-remediation.md  tauri-migration-progress.md  tauri-rust-migration.md
docs/plans/completed/: fileterm-core-decoupling-plan.md  multiplatform-system-observability.md  quality-gates-and-tech-debt-cleanup.md  resumable-transfers.md  structural-boundaries.md
docs/quality/: MODAL_OPTIMIZATION_SUMMARY.md  README.md  auto-update-release-checklist.md  connection-protocol-local-testing.md  desktop-ui-regression-checklist.md  git-branch-release-convention.md  local-auto-update-test.md  release-beta-mac.md  release-notes-1.2.1.md  release-notes-1.2.2.md  release-notes-2.0.0.md  release-notes-2.0.1.md  release-notes-2.0.2.md  resumable-transfers.md  rustsec-advisory-exceptions.md  tauri-phase4-validation.md  tauri-rc-protocol-checklist.md  terminal-layout-notes.md  terminal-regression-checklist.md
scripts/: sync-version-from-root.mjs
(+357 files in other folders)
