# FileTerm GPUI runtime workspace.
#
# Tauri (`apps/tauri/src-tauri`) and the protocol-fixture crate
# (`.github/fixtures/tauri-socket-lifecycle`) intentionally remain standalone
# cargo projects so the Tauri release pipeline is unaffected by GPUI work.
# Only the GPUI runtime is managed from this workspace root.
[workspace]
resolver = "2"
members = ["apps/gpui"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["FileTerm"]
repository = "https://github.com/fileterm/fileterm"

# `gpui-unofficial` 1.8.2 (and its transitive sub-crate `gpui-util-gpui-unofficial`
# 1.8.2) target rustc 1.93+, where `slice_as_array` and `cold_path` are stable.
# The active toolchain in this environment is 1.92.0, so we patch both crates
# to use the stable equivalents (`TryFrom<&[u8]> for &[u8; 8]` and eliding
# `std::hint::cold_path()` calls). Drop both patches once the workspace
# toolchain is bumped to 1.93+.
[patch.crates-io]
gpui-util-gpui-unofficial = { path = ".patches/gpui-util-gpui-unofficial" }
gpui-unofficial = { path = ".patches/gpui-unofficial" }
