[package]
name = "fileterm"
version = "1.1.1"
description = "FileTerm desktop workspace"
authors = ["FileTerm"]
edition = "2021"

[lib]
name = "fileterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
russh = "0.62"
russh-sftp = "2.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
regex = "1"
encoding_rs = "0.8"
rfd = "0.17"
sha2 = "0.10"
base64 = "0.22"
