[package]
name = "fileterm"
version = "1.1.1"
description = "FileTerm desktop workspace"
authors = ["FileTerm"]
edition = "2021"

[lib]
name = "fileterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
russh = "0.62"
russh-sftp = "2.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
regex = "1"
encoding_rs = "0.8"
rfd = "0.17"
sha2 = "0.10"
base64 = "0.22"
tokio-socks = "0.5"
tokio-serial = "5.5"
suppaftp = { version = "10", default-features = false, features = ["tokio-async-native-tls", "deprecated"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
rand = "0.10"
